Finish up basic system (server starts now and is joinable)